ci(gha): upgrade mega-linter to v7

--- a/.github/workflows/mega-linter.yml
+++ b/.github/workflows/mega-linter.yml
@@ -3,21 +3,29 @@ name: MegaLinter
 on:
   workflow_dispatch:
   push:
+    branches-ignore:
+      - main
+
+permissions: read-all
 
 jobs:
   build:
     name: MegaLinter
     runs-on: ubuntu-latest
+    permissions:
+      contents: write
+      statuses: write
     steps:
       - name: Checkout Code
         uses: actions/checkout@v3
 
       - name: MegaLinter
-        uses: megalinter/megalinter@v6
+        uses: megalinter/megalinter@v7
         env:
+          DISABLE_LINTERS: SPELL_CSPELL
+          FORMATTERS_DISABLE_ERRORS: false
           GITHUB_COMMENT_REPORTER: false
           GITHUB_STATUS_REPORTER: true
-          FORMATTERS_DISABLE_ERRORS: false
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
           PRINT_ALPACA: false
           VALIDATE_ALL_CODEBASE: ${{ github.event_name == 'push' && github.ref == 'refs/heads/main' || github.event_name == 'workflow_dispatch' }}
