--- a/.markdownlint.yml
+++ b/.markdownlint.yml
@@ -1,3 +1,5 @@
 ---
-# First line in a file should be a top-level heading
-MD041: false
+# Line length - https://github.com/DavidAnson/markdownlint/blob/master/doc/Rules.md#md013---line-length
+MD013:
+  code_blocks: false
+  tables: false
