--- a/.github/workflows/blog-post-workflow.yml
+++ b/.github/workflows/blog-post-workflow.yml
@@ -2,15 +2,17 @@ name: Latest blog post workflow
 on:
   workflow_dispatch:
   schedule:
-    - cron: "0 0 * * 0"
+    - cron: 0 0 * * 0
 
-permissions:
-  contents: write
+permissions: read-all
 
 jobs:
   update-readme-with-blog:
     name: Update this repo's README with latest blog posts
     runs-on: ubuntu-latest
+    permissions:
+      contents: write
+      pull-requests: write
     steps:
       - name: Checkout
         uses: actions/checkout@11bd71901bbe5b1630ceea73d27597364c9af683 # v4.2.2
@@ -18,7 +20,17 @@ jobs:
       - name: Pull in posts
         uses: gautamkrishnar/blog-post-workflow@v1
         with:
-          committer_username: "github-actions[bot]"
-          committer_email: "github-actions[bot]@users.noreply.github.com"
-          commit_message: "docs(readme): update latest blog posts"
+          skip_commit: true
           feed_list: "https://ruzickap.github.io/feed.xml"
+
+      - name: Create Pull Request
+        uses: peter-evans/create-pull-request@67ccf781d68cd99b580ae25a5c18a1cc84ffff1f # v7.0.6
+        with:
+          commit-message: "docs: update latest blog posts"
+          title: "docs: update latest blog posts"
+          body: "This PR updates the README with the latest blog posts."
+          branch: "update-readme-with-blog-${{ github.sha }}"
+          labels: "blog post"
+          reviewers: ${{ github.repository_owner }}
+          assignees: ${{ github.repository_owner }}
+          sign-commits: true
