--- a/.github/workflows/mega-linter.yml
+++ b/.github/workflows/mega-linter.yml
@@ -12,6 +12,7 @@ permissions: read-all
 jobs:
   mega-linter:
     runs-on: ubuntu-latest
+    if: ${{ !contains(fromJSON('["release-please--", "renovate/"]'), github.head_ref) }}
     timeout-minutes: 30
     steps:
       - name: Checkout Code
