fix: update Mastodon badge to use img tag for better compatibility

--- a/.markdownlint.yml
+++ b/.markdownlint.yml
@@ -16,3 +16,4 @@ MD013:
 MD033:
   allowed_elements:
     - a # Needed for rel="me" Mastodon verification links
+    - img # Needed for badge images inside anchor tags
