chore: improve CI workflows, templates, and linting
- Update issue templates to use proper Markdown headings
  and consistent formatting
- Bump GitHub Actions: codeql-action to v4.32.4,
  commit-check-action to v2.4.1, changed-files to v47.0.4,
  renovatebot/github-action to v46.1.1, stale to v10.2.0
- Simplify commit-check config using environment variables
  instead of inline TOML file
- Switch MegaLinter to documentation flavor for faster runs
- Add lychee cache cleanup step to re-check unavailable URLs
- Add explicit contents:read permission to CodeQL workflow
- Re-enable REPOSITORY_KINGFISHER linter in MegaLinter
- Add rumdl configuration to exclude CHANGELOG.md and
  disable code block line length checks
- Fix conventional commits URL in semantic-pull-request
- Improve blog post workflow PR messaging

--- a/.github/workflows/blog-post-workflow.yml
+++ b/.github/workflows/blog-post-workflow.yml
@@ -26,9 +26,9 @@ jobs:
       - name: Create Pull Request
         uses: peter-evans/create-pull-request@c0f553fe549906ede9cf27b5156039d195d2ece0 # v8.1.0
         with:
-          commit-message: "docs: update latest blog posts"
-          title: "docs: update latest blog posts"
-          body: "This PR updates the README with the latest blog posts."
+          commit-message: "docs: update the latest blog posts"
+          title: "docs: update the latest blog posts"
+          body: "This PR updates the README to include the latest blog posts."
           branch: "chore/update-readme-with-blog-${{ github.sha }}"
           labels: "blog post"
           reviewers: ${{ github.repository_owner }}
